SUBDIRS      = fortran cpp_examples add_device_simple arf arf_res_sharing crc crc_yosys crypto_designs fft_example function_pointers CHStone mm mm_float libm VGA VGA_Nexys4 file_simulate IP_integration simple_asm python-bindings led_example pong breakout MachSuite hls_study softfloat taste omp_simd discrepancy-parallel parallel_queries onnx
DIST_SUBDIRS = fortran cpp_examples add_device_simple arf arf_res_sharing crc crc_yosys crypto_designs fft_example function_pointers CHStone mm mm_float libm VGA VGA_Nexys4 file_simulate IP_integration simple_asm python-bindings led_example pong breakout MachSuite hls_study softfloat taste omp_simd discrepancy-parallel parallel_queries onnx
EXTRA_DIST = example.sh

examples_dir = $(pkgdatadir)/examples
examples_arf_dir = $(examples_dir)/arf
examples_arf__DATA = ../examples/arf/bambu.sh ../examples/arf/module.c ../examples/arf/README.txt ../examples/arf/test.xml

#do not touch the following line

